--- a/a1_style.css
+++ b/a1_style.css
@@ -1,3 +1,11 @@
 body {
-  background-color: tomato;
+  background-color: darkcyan;
+}
+
+#pokemon {
+  background-color: powderblue;
+  display: inline-block;
+  padding: 20px 50px;
+  margin: 20px 50px;
+  border-radius: 15px;
 }
