--- a/a1_style.css
+++ b/a1_style.css
@@ -1,11 +1,16 @@
 body {
   background-color: darkcyan;
+  font-size: 125%;
+}
+
+div {
+  padding: 10px;
 }
 
 #pokemon {
   background-color: powderblue;
   display: inline-block;
-  padding: 20px 50px;
-  margin: 20px 50px;
+  padding: 20px 40px;
+  margin: 20px 20px;
   border-radius: 15px;
 }
