--- a/a1_style.css
+++ b/a1_style.css
@@ -14,6 +14,7 @@ div {
   margin: 20px 20px;
   border-radius: 15px;
   text-align: center;
+  border: 5px solid dodgerblue;
 }
 
 #pokemon:hover {
@@ -24,6 +25,6 @@ div {
 }
 
 @keyframes fade {
-  from {background-color: skyblue;}
-  to {background-color: lightgreen;}
+  from {background-color: skyblue; border-color: dodgerblue;}
+  to {background-color: lightgreen; border-color: forestgreen;}
 }
