--- a/a1_style.css
+++ b/a1_style.css
@@ -14,17 +14,12 @@ div {
   margin: 20px 20px;
   border-radius: 15px;
   text-align: center;
-  border: 5px solid dodgerblue;
+  border: 5px solid;
+  border-color: deepskyblue;
+  transition: background-color 2s, border-color 2s;
 }
 
 #pokemon:hover {
-  animation-name: fade;
-  animation-duration: 2s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-}
-
-@keyframes fade {
-  from {background-color: skyblue; border-color: dodgerblue;}
-  to {background-color: lightgreen; border-color: forestgreen;}
+  background-color: lightgreen;
+  border-color: forestgreen;
 }
